--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteora-fee-router",
+  "name": "@ashqking/meteora-fee-router",
   "version": "1.0.0",
   "description": "Production-grade Solana program for automated fee distribution with quote-only accrual",
   "main": "index.js",
@@ -17,7 +17,9 @@
     "lint": "eslint . --ext .ts,.js",
     "format": "prettier --write .",
     "docs": "typedoc --out docs/api src/",
-    "package": "node scripts/package-deliverables.js"
+    "package": "node scripts/package-deliverables.js",
+    "publish:npm": "npm publish --access public",
+    "prepublishOnly": "npm run build && npm run test:unit"
   },
   "keywords": [
     "solana",
@@ -33,10 +35,7 @@
     "blockchain",
     "cryptocurrency"
   ],
-  "author": {
-    "name": "Meteora Fee Router Team",
-    "email": "contact@example.com"
-  },
+  "author": "@ashqking",
   "license": "MIT",
   "repository": {
     "type": "git",
