--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,7 @@
-name: 🚀 CI/CD Pipeline
+name: 🚀 CI/CD Pipeline (Disabled)
 
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
-  release:
-    types: [published]
+  workflow_dispatch: # Manual trigger only
 
 permissions:
   contents: read
