--- a/.gitignore
+++ b/.gitignore
@@ -187,7 +187,7 @@ docs/.doctrees/
 *~
 
 # Package manager lock files (keep package.json, ignore locks for libraries)
-package-lock.json
+# package-lock.json - KEEPING for CI/CD
 yarn.lock
 pnpm-lock.yaml
 
