feat: Add submission materials and improve demo reliability

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test:ts": "anchor test tests/",
     "test:integration": "anchor test tests/",
     "test:all": "npm run test:unit && npm run test:integration",
+    "test:quick": "cargo test --manifest-path programs/meteora-fee-router/Cargo.toml",
     "test:security": "anchor test tests/security-audit.test.ts",
     "test:performance": "anchor test tests/performance-compute.test.ts",
     "test:smoke": "anchor test tests/comprehensive-integration.test.ts",
     "demo:complete": "node scripts/demo-complete.js",
+    "demo:quick": "npm run test:quick",
     "demo:integration": "anchor test tests/comprehensive-integration.test.ts",
     "quickstart": "npm run build && npm run test:all",
     "deploy:devnet": "./deployment/deploy.sh devnet",
