chore: Remove all remaining bounty and hackathon references for production grade codebase

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: 🏷️ Release (Disabled)
 
 on:
-  workflow_dispatch: # Manual trigger only - DISABLED for bounty submission
+  workflow_dispatch: # Manual trigger only
 
 permissions:
   contents: write
@@ -28,9 +28,9 @@ jobs:
     - name: 📝 Create release notes
       run: |
         cat > release_notes.md << 'EOF'
-        # 🏆 Meteora Fee Router ${{ steps.tag.outputs.tag }} - Star at Superteam Earn Bounty Submission
+        # 🏷️ Meteora Fee Router ${{ steps.tag.outputs.tag }}
         
-        ## 🎯 Bounty Features
+        ## ✨ Features
         - **Quote-Only Fee Collection**: Honorary DAMM v2 LP position with strict enforcement
         - **24-Hour Distribution Crank**: Permissionless system with pagination support
         - **Streamflow Integration**: Real-time vesting schedule reading for proportional distribution
@@ -54,22 +54,13 @@ jobs:
         - Automated validation and verification tools
         - Production-ready build optimization
         
-        ## 💰 Business Value for Star Platform
-        - **Immediate Integration**: Ready for Star's fundraising platform
-        - **Transparent Fee Sharing**: Automated investor relations
-        - **Reduced Operational Costs**: No manual distribution required
-        - **Enhanced Trust**: Auditable, on-chain fee distribution
-        
         ## 🔗 Quick Links
         - [Integration Examples](docs/INTEGRATION_EXAMPLES.md)
         - [Operational Procedures](docs/OPERATIONAL_PROCEDURES.md)
         - [Security Audit Summary](docs/SECURITY_AUDIT_SUMMARY.md)
-        - [Bounty Submission Details](BOUNTY_SUBMISSION.md)
         
         ---
         
-        **Built for**: Star at Superteam Earn Bounty Program  
-        **Category**: DeFi Infrastructure - Meteora DAMM V2 Fee Routing  
         **Status**: Production Ready 🚀
         EOF
         
@@ -77,7 +68,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.tag.outputs.tag }}
-        name: 🏆 Meteora Fee Router ${{ steps.tag.outputs.tag }} - Bounty Submission
+        name: 🏷️ Meteora Fee Router ${{ steps.tag.outputs.tag }}
         body_path: release_notes.md
         draft: false
         prerelease: false
