chore: Remove all bounty/hackathon references from scripts and workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: 🧪 Test Suite (Disabled)
 
 on:
-  workflow_dispatch: # Manual trigger only - DISABLED for bounty submission
+  workflow_dispatch: # Manual trigger only
 
 env:
   CARGO_TERM_COLOR: always
