--- a/Anchor.toml
+++ b/Anchor.toml
@@ -20,5 +20,5 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 
 [workspace]
 members = [
-    "programs/*"
+    "programs/meteora-fee-router"
 ]
